command,query분리